# mpu6050-validation-workspace

./: Cargo.toml  Makefile  README.md  run.sh  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  crate-publish.yml  release.yml
boards/esp32-c3/: Cargo.toml  README.md  build.rs
boards/esp32-c3/.cargo/: config.toml
boards/esp32-c3/src/: acquisition.rs  board.rs  boot.rs  main.rs  stamped.rs  startup.rs  telemetry.rs
boards/esp32-c3/tests/: target_regression.rs
boards/esp32-p4/: Cargo.toml  README.md
boards/esp32-p4/.cargo/: config.toml
boards/esp32-p4/src/: bitbang_i2c.rs  board.rs  main.rs
crates/imu-validation/: Cargo.toml
crates/imu-validation/src/: lib.rs
crates/mpu6050-driver/: Cargo.toml  HW-REGRESSION-0.2.md  LICENSE  README.md
crates/mpu6050-driver/examples/: convert_raw.rs  stationary_usability.rs  wake_and_read.rs
crates/mpu6050-driver/src/: config.rs  interrupt.rs  lib.rs  power.rs  raw.rs  registers.rs  test_support.rs
crates/mpu6050-driver/tests/: conversion_regression.rs  public_api.rs
scripts/: check-firmware-budget.sh  hw-acquisition-regression.sh
tools/imu-tool/: Cargo.toml
tools/imu-tool/src/: lib.rs  validation.rs
