[package]
name = "mpu6050-esp32c3-bringup"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
binary-frames = []

[dependencies]
log = "0.4.28"
mpu6050-driver = "0.1.0"

[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-backtrace = { version = "0.18.0", features = ["esp32c3", "panic-handler", "println"] }
esp-hal = { version = "1.1.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"] }
critical-section = "1.2.0"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c3"] }
