[package]
name = "imu-tool"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.7"
